# goit-cs-hw-06

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
src/: connection.py
templates/: error.html  index.html  message.html
